--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -1,7 +1,9 @@
 
 .search-bar {
 	background: #fff;
+	max-width: 600px;
 	padding: 0.8em;
+	margin: 20px auto 0;
 	width: 100%;
 	border-radius: 10em;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
